--- a/WeatherBZ/res/values-uk/strings.xml
+++ b/WeatherBZ/res/values-uk/strings.xml
@@ -160,5 +160,22 @@
     <string name="settings_widgets_widget4x2_custom_font_summary">Налаштування розміру шрифту для елементів віджета</string>
     <string name="settings_show_info_title">Відображення даних</string>
     <string name="settings_show_info_summary">Показувати або приховати елементи інтерфейсу</string>
-
+    <string name="settings_notification_type">Тип повідомлення</string>
+    <string name="quiet_hours_title">Тихі години</string>
+    <string name="quiet_hours_enabled">Включити тихі години</string>
+    <string name="quiet_hours_enabled_on">Тихі години включені</string>
+    <string name="quiet_hours_enabled_off">Оновлення будуть працювати як звичайно</string>
+    <string name="start_time_title">Початок</string>
+    <string name="end_time_title">Кінець</string>   
+    <string name="dlg_select_action">Виберіть дію</string>
+    <string name="dlg_go_to_forecast">Перейти до прогнозу</string>
+    <string name="dlg_set_as_home">Як \"Основне місто\"</string>
+    <string name="wind_n">Пн</string>    
+    <string name="wind_ne">ПнС</string> 
+    <string name="wind_nw">ПнЗ</string> 
+    <string name="wind_s">Пд</string> 
+    <string name="wind_se">ПдС</string> 
+    <string name="wind_sw">ПдЗ</string> 
+    <string name="wind_e">С</string> 
+    <string name="wind_w">З</string>   
 </resources>
