--- a/WeatherBZ/res/values-ro/strings.xml
+++ b/WeatherBZ/res/values-ro/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decoded by jBART (BurgerZ <az.burgerz@gmail.com)>--><resources>
+<resources>
     <string name="new_version">Versiune nouă</string>
     <string name="no_updates">Nici o versiune nouă</string>
     <string name="close">Închideţi</string>
@@ -61,9 +61,9 @@
     <string name="no_provider">"Poziționarea eșuată.
 Selectaţi locaţia manual"</string>
     <string name="network_error">Nu se poate conecta la server</string>
-    <string name="updating">Actualizare...</string>
+    <string name="updating">Actualizare…</string>
     <string name="just_now">Acum</string>
-    <string name="fetching_location">Obţinere locaţie...</string>
+    <string name="fetching_location">Obţinere locaţie…</string>
     <string name="wt_clear">Senin</string>
     <string name="wt_mostly_clear">Predominant senin</string>
     <string name="wt_mostly_clear_pos_rain">Predominant senin, posibil ploi</string>
