--- a/WeatherBZ/res/values-ru/strings.xml
+++ b/WeatherBZ/res/values-ru/strings.xml
@@ -10,7 +10,6 @@
     <string name="settings_check_updates_summary">Проверять наличие новой версии приложения при запуске</string>        
     <string name="settings_category_app_update">Обновление приложения</string>  
     <string name="settings_category_forecast_update">Обновление прогноза</string>    
-    <string name="widget_name_small">Погода BZ</string>
     <string name="widget_name_medium">Погода BZ</string>
     <string name="widget_name_large">Погода BZ</string>
     <string name="about_version">Версия</string>
@@ -111,7 +110,7 @@
     <string name="wt_overcast_l_snow">Облачно, небольшой снег</string>
     <string name="wt_overcast_showers">Облачно, ливни</string>
     <string name="wt_overcast_wet_snow_showers">Облачно, мокрый снег</string>
-    <string name="wt_overcast_snow_showers">Облачно, снег</string>
+    <string name="wt_overcast_snow_showers">Облачно, временами снег</string>
     <string name="wt_overcast_rain">Облачно, дождь</string>
     <string name="wt_overcast_wet_snow">Облачно, мокрый снег</string>
     <string name="wt_overcast_snow">Облачно, снег</string>
