--- a/WeatherBZ/res/values-uk/strings.xml
+++ b/WeatherBZ/res/values-uk/strings.xml
@@ -185,5 +185,9 @@
     <string name="wind_se">ПдС</string> 
     <string name="wind_sw">ПдЗ</string> 
     <string name="wind_e">С</string> 
-    <string name="wind_w">З</string>   
+    <string name="wind_w">З</string>
+    <string name="settings_widgets_widget4x1_transparent_title">Прозорий фон</string> 
+    <string name="settings_widgets_widget4x1_transparent_sum">Зніміть галочку для використання фону за замовчуванням</string> 
+    <string name="settings_widgets_widget4x1_white_text_title">Білий колір тексту</string> 
+    <string name="settings_widgets_widget4x1_white_text_sum">Зніміть галочку для використання темного тексту та іконок</string>  
 </resources>
