--- a/WeatherBZ/res/values-uk/strings.xml
+++ b/WeatherBZ/res/values-uk/strings.xml
@@ -179,13 +179,13 @@
     <string name="dlg_go_to_forecast">Перейти до прогнозу</string>
     <string name="dlg_set_as_home">Як \"Основне місто\"</string>
     <string name="wind_n">Пн</string>    
-    <string name="wind_ne">ПнС</string> 
-    <string name="wind_nw">ПнЗ</string> 
+    <string name="wind_ne">ПнСх</string> 
+    <string name="wind_nw">ПнЗх</string> 
     <string name="wind_s">Пд</string> 
-    <string name="wind_se">ПдС</string> 
-    <string name="wind_sw">ПдЗ</string> 
-    <string name="wind_e">С</string> 
-    <string name="wind_w">З</string>
+    <string name="wind_se">ПдСх</string> 
+    <string name="wind_sw">ПдЗх</string> 
+    <string name="wind_e">Сх</string> 
+    <string name="wind_w">Зх</string>
     <string name="settings_widgets_widget4x1_transparent_title">Прозорий фон</string> 
     <string name="settings_widgets_widget4x1_transparent_sum">Зніміть галочку для використання фону за замовчуванням</string> 
     <string name="settings_widgets_widget4x1_white_text_title">Білий колір тексту</string> 
