--- a/WeatherBZ/res/values-ru/strings.xml
+++ b/WeatherBZ/res/values-ru/strings.xml
@@ -19,9 +19,9 @@
     <string name="about_copyright">Сведения об авторских правах</string>
     <string name="about_sunny">Ясно</string>
     <string name="about_sunny_night">Ясно (ночь)</string>
-    <string name="about_cloudy">Малооблачно</string>
-    <string name="about_cloudy_night">Малооблачно (ночь)</string>
-    <string name="about_overcast">Облачно</string>
+    <string name="about_cloudy">Облачно</string>
+    <string name="about_cloudy_night">Облачно (ночь)</string>
+    <string name="about_overcast">Пасмурно</string>
     <string name="about_dust">Песчаная буря</string>
     <string name="about_fog">Туман</string>
     <string name="about_hailstone">Град</string>
@@ -91,32 +91,32 @@
     <string name="wt_partly_cloudy_pos_ts_rain">Переменная облачность, возможен дождь</string>
     <string name="wt_partly_cloudy_pos_ts_wet_snow">Переменная облачность, возможен мокрый снег</string>
     <string name="wt_partly_cloudy_pos_ts_snow">Переменная облачность, возможен снег</string>
-    <string name="wt_cloudy">Преимущественно облачно</string>
-    <string name="wt_cloudy_l_rain">Преимущественно облачно, небольшой дождь</string>
-    <string name="wt_cloudy_l_wet_snow">Преимущественно облачно, небольшой мокрый снег</string>
-    <string name="wt_cloudy_l_snow">Преимущественно облачно, небольшой снег</string>
-    <string name="wt_cloudy_showers">Преимущественно облачно, ливни</string>
-    <string name="wt_cloudy_wet_snow_showers">Преимущественно облачно, мокрый снег</string>
-    <string name="wt_cloudy_snow_showers">Преимущественно облачно, снег</string>
-    <string name="wt_cloudy_rain">Преимущественно облачно, дождь</string>
-    <string name="wt_cloudy_wet_snow">Преимущественно облачно, мокрый снег</string>
-    <string name="wt_cloudy_snow">Преимущественно облачно, снег</string>
-    <string name="wt_cloudy_ts_rain">Преимущественно облачно, дождь</string>
-    <string name="wt_cloudy_ts_wet_snow">Преимущественно облачно, мокрый снег</string>
-    <string name="wt_cloudy_ts_snow">Преимущественно облачно, снег</string>
-    <string name="wt_overcast">Облачно</string>
-    <string name="wt_overcast_l_rain">Облачно, небольшой дождь</string>
-    <string name="wt_overcast_l_wet_snow">Облачно, небольшой мокрый снег</string>
-    <string name="wt_overcast_l_snow">Облачно, небольшой снег</string>
-    <string name="wt_overcast_showers">Облачно, ливни</string>
-    <string name="wt_overcast_wet_snow_showers">Облачно, мокрый снег</string>
-    <string name="wt_overcast_snow_showers">Облачно, временами снег</string>
-    <string name="wt_overcast_rain">Облачно, дождь</string>
-    <string name="wt_overcast_wet_snow">Облачно, мокрый снег</string>
-    <string name="wt_overcast_snow">Облачно, снег</string>
-    <string name="wt_overcast_ts_rain">Облачно, гроза с дождем</string>
-    <string name="wt_overcast_ts_wet_snow">Облачно, гроза с мокрым снегом</string>
-    <string name="wt_overcast_ts_snow">Облачно, гроза со снегом</string>
+    <string name="wt_cloudy">Облачно</string>
+    <string name="wt_cloudy_l_rain">Облачно, небольшой дождь</string>
+    <string name="wt_cloudy_l_wet_snow">Облачно, небольшой мокрый снег</string>
+    <string name="wt_cloudy_l_snow">Облачно, небольшой снег</string>
+    <string name="wt_cloudy_showers">Облачно, ливни</string>
+    <string name="wt_cloudy_wet_snow_showers">Облачно, мокрый снег</string>
+    <string name="wt_cloudy_snow_showers">Облачно, снег</string>
+    <string name="wt_cloudy_rain">Облачно, дождь</string>
+    <string name="wt_cloudy_wet_snow">Облачно, мокрый снег</string>
+    <string name="wt_cloudy_snow">Облачно, снег</string>
+    <string name="wt_cloudy_ts_rain">Облачно, гроза с дождем</string>
+    <string name="wt_cloudy_ts_wet_snow">Облачно, гроза с мокрым снегом</string>
+    <string name="wt_cloudy_ts_snow">Облачно, гроза со снегом</string>
+    <string name="wt_overcast">Пасмурно</string>
+    <string name="wt_overcast_l_rain">Пасмурно, небольшой дождь</string>
+    <string name="wt_overcast_l_wet_snow">Пасмурно, небольшой мокрый снег</string>
+    <string name="wt_overcast_l_snow">Пасмурно, небольшой снег</string>
+    <string name="wt_overcast_showers">Пасмурно, ливни</string>
+    <string name="wt_overcast_wet_snow_showers">Пасмурно, мокрый снег</string>
+    <string name="wt_overcast_snow_showers">Пасмурно, временами снег</string>
+    <string name="wt_overcast_rain">Пасмурно, дождь</string>
+    <string name="wt_overcast_wet_snow">Пасмурно, мокрый снег</string>
+    <string name="wt_overcast_snow">Пасмурно, снег</string>
+    <string name="wt_overcast_ts_rain">Пасмурно, гроза с дождем</string>
+    <string name="wt_overcast_ts_wet_snow">Пасмурно, гроза с мокрым снегом</string>
+    <string name="wt_overcast_ts_snow">Пасмурно, гроза со снегом</string>
     <string name="conf_add_widget">Добавить виджет</string>
     <string name="conf_light_skin">Светлый скин</string>
     <string name="conf_dark_skin">Темный скин</string>
