--- a/WeatherBZ/res/values-da/strings.xml
+++ b/WeatherBZ/res/values-da/strings.xml
@@ -34,7 +34,7 @@
   <string name="dlg_set_as_home">Indstil som \"Hjemby\"</string>
   <string name="download_video">Download video</string>
   <string name="end_time_title">Slutningen</string>
-  <string name="fetching_location">Lokaliserer ...</string>
+  <string name="fetching_location">Lokaliserer \u2026</string>
   <string name="just_now">Lige nu</string>
   <string name="location_edit">Angiv bynavn</string>
   <string name="location_list">Steder</string>
@@ -103,19 +103,19 @@
   <string name="settings_widgets_widget4x1_white_text_sum">Sort tekst og vejr ikoner hvis ikke afkrydset</string>
   <string name="settings_widgets_widget4x1_white_text_title">Hvid tekst farve</string>
   <string name="settings_widgets_widget4x2">Widget 4x2</string>
-  <string name="settings_widgets_widget4x2_city_font_summary">Standard størrelse 14sp</string>
+  <string name="settings_widgets_widget4x2_city_font_summary">Standard størrelse 22sp</string>
   <string name="settings_widgets_widget4x2_city_font_title">By</string>
-  <string name="settings_widgets_widget4x2_clock_font_summary">Standard størrelse 44sp</string>
+  <string name="settings_widgets_widget4x2_clock_font_summary">Standard størrelse 50sp</string>
   <string name="settings_widgets_widget4x2_clock_font_title">Ur</string>
   <string name="settings_widgets_widget4x2_custom_font_summary">Rediger skriftstørrelse for widget</string>
   <string name="settings_widgets_widget4x2_custom_font_title">Brugerdefineret skriftstørrelse</string>
-  <string name="settings_widgets_widget4x2_date_font_summary">Standard størrelse 12sp</string>
+  <string name="settings_widgets_widget4x2_date_font_summary">Standard størrelse 14sp</string>
   <string name="settings_widgets_widget4x2_date_font_title">Dato</string>
   <string name="settings_widgets_widget4x2_desc_font_summary">Standard størrelse 22sp</string>
   <string name="settings_widgets_widget4x2_desc_font_title">Vejrbeskrivelse</string>
   <string name="settings_widgets_widget4x2_feel_font_summary">Standard størrelse 14sp</string>
   <string name="settings_widgets_widget4x2_feel_font_title">Realfeel</string>
-  <string name="settings_widgets_widget4x2_temp_font_summary">Standard værdi 38sp</string>
+  <string name="settings_widgets_widget4x2_temp_font_summary">Standard værdi 40sp</string>
   <string name="settings_widgets_widget4x2_temp_font_title">Temperatur</string>
   <string name="settings_widgets_widget4x2_wind_font_summary">Standard størrelse 14sp</string>
   <string name="settings_widgets_widget4x2_wind_font_title">Vind</string>
@@ -136,8 +136,9 @@
   <string name="weather_visibility_measure">"m"</string>
   <string name="weather_wind">"Vind:"</string>
   <string name="weather_wind_measure">"m/s"</string>
-  <string name="widget_name_large">Vejr BZ</string>
-  <string name="widget_name_medium">Vejr BZ</string>
+  <string name="widget_name_large">Vejr BZ 4x2</string>
+  <string name="widget_name_medium">Vejr BZ 4x1</string>
+  <string name="widget_name_medium_ext">Vejr BZ 4x1</string> 
   <string name="wind_e">Ø</string>
   <string name="wind_n">N</string>
   <string name="wind_ne">NØ</string>
