--- a/WeatherBZ/res/values-it/strings.xml
+++ b/WeatherBZ/res/values-it/strings.xml
@@ -10,8 +10,9 @@
     <string name="settings_check_updates_summary">"Controlla aggiornamenti all'avvio"</string>
     <string name="settings_category_app_update">Application update</string>
     <string name="settings_category_forecast_update">Forecast update</string>
-    <string name="widget_name_medium">Weather BZ (4x1)</string>
-    <string name="widget_name_large">Weather BZ (4x2)</string>
+    <string name="widget_name_medium">Weather BZ 4x1</string>
+    <string name="widget_name_medium_ext">Weather BZ 4x1</string> 
+    <string name="widget_name_large">Weather BZ 4x2</string>
     <string name="about_version">Versione</string>
     <string name="about_author">Autore</string>
     <string name="about_provider">Provider Meteo</string>
@@ -154,13 +155,13 @@
     <string name="settings_widgets_widget4x2_desc_font_title">Descrizione Meteo</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">Valore default 22sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Orologio</string>
-    <string name="settings_widgets_widget4x2_clock_font_summary">Valore default 44sp</string>
+    <string name="settings_widgets_widget4x2_clock_font_summary">Valore default 50sp</string>
     <string name="settings_widgets_widget4x2_date_font_title">Data</string>
-    <string name="settings_widgets_widget4x2_date_font_summary">Valore default 12sp</string>
+    <string name="settings_widgets_widget4x2_date_font_summary">Valore default 14sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Città</string>
-    <string name="settings_widgets_widget4x2_city_font_summary">Valore default 14sp</string>
+    <string name="settings_widgets_widget4x2_city_font_summary">Valore default 22sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Temperatura</string>
-    <string name="settings_widgets_widget4x2_temp_font_summary">Valore default 38sp</string>
+    <string name="settings_widgets_widget4x2_temp_font_summary">Valore default 40sp</string>
     <string name="settings_widgets_widget4x2_feel_font_title">Percepito</string>
     <string name="settings_widgets_widget4x2_feel_font_summary">Valore default 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Vento</string>
