--- a/WeatherBZ/res/values-uk/strings.xml
+++ b/WeatherBZ/res/values-uk/strings.xml
@@ -9,8 +9,9 @@
     <string name="settings_check_updates_summary">Перевіряти наявність нової версії додатка при запуску</string>        
     <string name="settings_category_app_update">Оновлення додатка</string>  
     <string name="settings_category_forecast_update">Оновлення прогнозу</string>    
-    <string name="widget_name_medium">Погода BZ</string>
-    <string name="widget_name_large">Погода BZ</string>
+    <string name="widget_name_medium">Погода BZ 4x1</string>
+	<string name="widget_name_medium_ext">Погода BZ 4x1</string>        
+    <string name="widget_name_large">Погода BZ 4x2</string>
     <string name="about_version">Версія</string>
     <string name="about_author">Автор</string>
     <string name="about_provider">Постачальник погоди</string>
@@ -153,13 +154,13 @@
     <string name="settings_widgets_widget4x2_desc_font_title">Опис погоди</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">За замовчуванням 22sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Годинник</string>
-    <string name="settings_widgets_widget4x2_clock_font_summary">За замовчуванням 44sp</string>
+    <string name="settings_widgets_widget4x2_clock_font_summary">За замовчуванням 50sp</string>
     <string name="settings_widgets_widget4x2_date_font_title">Дата</string>
-    <string name="settings_widgets_widget4x2_date_font_summary">За замовчуванням 12sp</string>
+    <string name="settings_widgets_widget4x2_date_font_summary">За замовчуванням 14sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Місто</string>
-    <string name="settings_widgets_widget4x2_city_font_summary">За замовчуванням 14sp</string>
+    <string name="settings_widgets_widget4x2_city_font_summary">За замовчуванням 22sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Температура</string>
-    <string name="settings_widgets_widget4x2_temp_font_summary">За замовчуванням 38sp</string>
+    <string name="settings_widgets_widget4x2_temp_font_summary">За замовчуванням 40sp</string>
     <string name="settings_widgets_widget4x2_feel_font_title">Відчуття</string>
     <string name="settings_widgets_widget4x2_feel_font_summary">За замовчуванням 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Вітер</string>
